--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,4 +20,10 @@ set_target_properties(fastcarbs_core PROPERTIES SKBUILD_MODULE_NAME fastcarbs.fa
 
 # Ensure the extension target is installed for both normal and editable installs
 install(TARGETS fastcarbs_core LIBRARY DESTINATION .)
-target_compile_options(fastcarbs_core PRIVATE -O3 -ffast-math -march=native)
+
+# FTZ is spooky
+if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  list(APPEND _fast_local_flags -mno-daz-ftz)
+endif()
+
+target_compile_options(fastcarbs_core PRIVATE -O3 -ffast-math -march=native -fdenormal-fp-math=ieee)
