--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "carbs-base"]
 	path = carbs-base
-	url = https://github.com/imbue-ai/carbs
+	url = https://github.com/achyuta-rajaram/carbs
